--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "Lorex <ceo@sita.tech>",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^11.2.1"
+    "discord.js": "^11.2.1",
+    "moment": "^2.19.1",
+    "moment-duration-format": "^1.3.0"
   }
 }
