--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   "author": "Lorex <ceo@sita.tech>",
   "license": "ISC",
   "dependencies": {
+    "common-tags": "^1.4.0",
     "discord.js": "^11.2.1",
     "moment": "^2.19.1",
-    "moment-duration-format": "^1.3.0"
+    "moment-duration-format": "^1.3.0",
+    "simple-rcon": "^0.3.1",
+    "srcds-rcon": "^2.2.1"
   }
 }
